@@ -15,7 +15,9 @@ targetCompatibility = "14"
 repositories {
     mavenCentral()
 }
-
+tasks.withType(JavaCompile).each {
+    it.options.compilerArgs.add('--enable-preview')
+}
 dependencies {
     testCompile group: 'junit', name: 'junit', version: '4.12'
     testImplementation 'com.github.javaparser:javaparser-symbol-solver-core:3.16.1'
